[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Main/Server.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Combat.gd" type="Script" id=2]
[ext_resource path="res://Scripts/PlayerVerification.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Singletons/StateProcessing.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Main/ServerRoom.tscn" type="PackedScene" id=5]

[node name="Server" type="Node"]
script = ExtResource( 1 )

[node name="PlayerVerification" type="Node" parent="."]
script = ExtResource( 3 )

[node name="VerificationExpiration" type="Timer" parent="PlayerVerification"]

[node name="Combat" type="Node" parent="."]
script = ExtResource( 2 )

[node name="TokenExpiration" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="StateProcessing" parent="." instance=ExtResource( 4 )]

[node name="ServerRoom" parent="." instance=ExtResource( 5 )]
[connection signal="timeout" from="PlayerVerification/VerificationExpiration" to="PlayerVerification" method="_on_VerificationExpiration_timeout"]
[connection signal="timeout" from="TokenExpiration" to="." method="_on_TokenExpiration_timeout"]
